--- a/coach-phrog/package.json
+++ b/coach-phrog/package.json
@@ -9,13 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.4",
-    "next": "13.3.4",
-    "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
+    "autoprefixer": "^10.4.14",
+    "next": "^13.3.4",
+    "tailwindcss": "^3.3.2"
   }
 }
