--- a/coach-phrog/package.json
+++ b/coach-phrog/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.17",
     "autoprefixer": "^10.4.14",
     "next": "^13.3.4",
+    "react": "^18.2.0",
     "tailwindcss": "^3.3.2"
   }
 }
