--- a/coach-phrog/package.json
+++ b/coach-phrog/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^2.51.6",
     "next": "^13.3.4",
     "react": "^18.2.0",
     "tailwindcss": "^3.3.2"
