--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/helper-module-imports": "^7.21.4",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "autoprefixer": "^10.4.14",
+    "babel-plugin-macros": "^3.1.0",
     "daisyui": "^2.51.6",
+    "fontawesome-free": "^1.0.4",
+    "fs": "^0.0.1-security",
     "next": "^13.3.4",
     "react": "^18.2.0",
     "tailwindcss": "^3.3.2"
