--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "^0.0.1-security",
     "next": "^13.3.4",
     "react": "^18.2.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "use-dark-mode": "^2.3.1"
   }
 }
