--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "@material-tailwind/react": "^2.0.1",
     "autoprefixer": "^10.4.14",
     "babel-plugin-macros": "^3.1.0",
     "daisyui": "^2.51.6",
