--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "react": "^18.2.0",
     "tailwindcss": "^3.3.2",
     "use-dark-mode": "^2.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.41.0"
   }
 }
