--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@material-tailwind/react": "^2.0.1",
+    "@themesberg/flowbite": "^1.3.0",
     "autoprefixer": "^10.4.14",
     "babel-plugin-macros": "^3.1.0",
     "daisyui": "^2.51.6",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.7",
     "fontawesome-free": "^1.0.4",
     "fs": "^0.0.1-security",
     "next": "^13.3.4",
